apps/iulse/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iulse
  labels:
    name: iulse
